js262/test/language/statements/using/syntax/with-initializer-do-statement-while-expression.js


/*---
esid: sec-do-while-statement
description: >
    using declarations with initialisers in statement positions:
    do Statement while ( Expression )
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
do using x = 1; while (false)
